bug(schedulepayment): schedule